Fix hero layout bug, activete recruitment form

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -40,11 +40,7 @@
 		justify-content: flex-end;
 		width: 100vw;
 		height: 100vh;
-		margin-bottom: 140px;
-	}
-
-   @media (max-height: 720px) {
-		top: -24%;
+		margin-bottom: 10%;
 	}
 }
 
